# ChangeLog for sys-apps/openrc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.38 2008/05/31 07:04:58 vapier Exp $

  31 May 2008; Mike Frysinger <vapier@gentoo.org> openrc-0.2.5.ebuild,
  openrc-9999.ebuild:
  Do the timezone upgrade before moving the clock conf.d as pointed out by
  Hopeless #222867.

*openrc-0.2.5 (29 May 2008)

  29 May 2008; Doug Goldstein <cardoe@gentoo.org> +openrc-0.2.5.ebuild:
  version bump to fix a few outstanding bugs. 1) when a process stops, it
  may delete it's pid file before actually being stopped

*openrc-0.2.4-r1 (14 May 2008)

  14 May 2008; Doug Goldstein <cardoe@gentoo.org> +openrc-0.2.4-r1.ebuild:
  fix bug #221751 and bug #220579

*openrc-0.2.4 (11 May 2008)

  11 May 2008; Mike Frysinger <vapier@gentoo.org> +openrc-0.2.4.ebuild:
  Version bump.

*openrc-0.2.3 (29 Apr 2008)

  29 Apr 2008; Doug Goldstein <cardoe@gentoo.org> +openrc-0.2.3.ebuild:
  version bump. numerous bug fixes

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> openrc-0.2.2.ebuild,
  openrc-9999.ebuild:
  Make sure to force glibc-2.5+ #218441 by onox.

  15 Apr 2008; Doug Goldstein <cardoe@gentoo.org> openrc-0.2.1-r2.ebuild,
  openrc-0.2.2.ebuild, openrc-9999.ebuild:
  have to touch /etc/conf.d/net otherwise unmerge-orphans eats it later on

*openrc-0.2.2 (15 Apr 2008)

  15 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -openrc-0.2.1-r1.ebuild,
  +openrc-0.2.2.ebuild:
  version bump to get the latest fixes

  15 Apr 2008; Doug Goldstein <cardoe@gentoo.org> openrc-0.2.1-r1.ebuild,
  openrc-0.2.1-r2.ebuild, openrc-9999.ebuild:
  fix bug #217764

*openrc-0.2.1-r2 (15 Apr 2008)

  15 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/openrc-0.2.1-bad--help-output.patch,
  +files/openrc-0.2.1-no-deref-null.patch,
  +files/openrc-0.2.1-openvz-support.patch,
  +files/openrc-0.2.1-respect-fastboot.patch, +openrc-0.2.1-r2.ebuild: