@@ -13,14 +13,14 @@ EBUILD openrc-0.2.2.ebuild 8831 RMD160 2afa29b02af98ee215fdb1cf7ce8ffeb28c2e550 
 EBUILD openrc-0.2.3.ebuild 8831 RMD160 9c20bf75aa9bd701bda1d3a03accdd2f8f53015d SHA1 ed65da14a702bf4c861608177c16301e2445647e SHA256 4d9e573e9ea4bcb5a8b7d897f9c0d8674ac71d82a67e5f835411ee35d8861293
 EBUILD openrc-0.2.4-r1.ebuild 8955 RMD160 263224dd336974e2909921c8b6add525ce3c5430 SHA1 d17eaca482fc0eb4b7c716af469abc1f67b89ed8 SHA256 3ef68c487299f5487eb4ad5d76aaf1925daf0a13a1bd280231b53ef3e267d916
 EBUILD openrc-0.2.4.ebuild 8831 RMD160 ef7f0d383a667600e47edd2cd63404b8b8643e53 SHA1 d779481a0388af6be1ae2c0c384b37d65912a506 SHA256 ae95509b4478780788ac291a294ea8926aae473040b7be7f17f64d4fee3dc4fe
-EBUILD openrc-0.2.5.ebuild 8914 RMD160 3520f7d407e24d47cb149333b2bc97e6e3aee863 SHA1 8d3727eebf736c962ceb9deca19f8579c8adece5 SHA256 8be1831940583e156281c66a66e14e8fba22b5a330ccf896e8bdbbd943917260
-EBUILD openrc-9999.ebuild 8692 RMD160 8aac008784c5a78466a5624d8dc88f520ac1b2fc SHA1 7de06f2d4e3798ad41713f9d5da93e2c92d52d6d SHA256 40c3de36933d5b4f3168dbb8b24b0c4b29377d6c1179aa6861272ac705f5a9b2
-MISC ChangeLog 6596 RMD160 6d0c531e3b297181a440e45e3f181d648ceabbad SHA1 ccbcab8e5cb3bc76b90714a90bda7e8d1ffce600 SHA256 c90ce1bd9e613a35877546721bb4f72832a67519ba49560c9184da7763e5d0e9
+EBUILD openrc-0.2.5.ebuild 8914 RMD160 e2f797012fdac27a4dce86164d40da8b010e4906 SHA1 886c0e709d17c0d87a43f1bcc263ac2e7c794430 SHA256 2e0ca58c4b133d3fc6eaa45deec605329634f52516fa0fa6fdaee65c35c59858
+EBUILD openrc-9999.ebuild 8692 RMD160 3d37c51e3e136d6df015e7b49f51a4d88bc896d5 SHA1 2151685a0263a1d687d1ab3dd755d72cc42e2d4b SHA256 c9d5fe907f1f38c3c88f21174496298cd4f6adddc9fa4edbae7c24e4797dfb63
+MISC ChangeLog 6762 RMD160 082c275916801ab42b5a68b03cd004955aaa9dc2 SHA1 3345c16043d59180d71d7ddd4fabcf68ba5d61ed SHA256 1bca0efb82df29201fe0fef38c0033d9d85dc9e211b5ed07fc1675b237a28821
 MISC metadata.xml 231 RMD160 c39b780fbbb9eb38f1ba1a0ee134231ca8e7449c SHA1 d5a4c0d0c7641c862b43e742f832bab6c69482d8 SHA256 02e8fa3806efbc7cea8bc78653397b8d59b398faca8bcfd3aabb216103cd8f4f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFIQPjtj9hvisErhMIRApjiAKC2EjMA9G2jc5QJVYhsTIXkrk35iQCgvGbJ
-326xI3s2dALMpbE7sNNGhcU=
-=WjLZ
+iD8DBQFIQhEXj9hvisErhMIRAsevAKDduEOtDj2BKT+glF4kV+fiTKwIqACdEw8p
+3SzOYZ9oODm2fUMATAEtmsU=
+=pcez
 -----END PGP SIGNATURE-----
