@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/openrc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.38 2008/05/31 07:04:58 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.39 2008/06/01 03:01:37 vapier Exp $
+
+  01 Jun 2008; Mike Frysinger <vapier@gentoo.org> openrc-0.2.5.ebuild,
+  openrc-9999.ebuild:
+  Fix net.lo test in upgrade path as pointed out by compguy284 #224425.
 
   31 May 2008; Mike Frysinger <vapier@gentoo.org> openrc-0.2.5.ebuild,
   openrc-9999.ebuild:
